Fix image stretching in desktop by having a fixed grid size for images

--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,13 @@
 
 }
 
+#imageBox {
+
+    height: 100%;
+    width: 100%;
+
+}
+
 
 }
 
@@ -115,8 +122,8 @@ body {
     width: 100%;
     display: grid;
 
-    grid-template-columns: 1fr 1fr 8fr;
-    grid-template-rows: 12fr 1fr 3fr;
+    grid-template-columns: 1fr 1fr /*12fr*/ 1200px;
+    grid-template-rows: 750px /*8fr*/ 1fr 3fr;
 }
 
 .menu.main {
@@ -184,6 +191,14 @@ body {
 
 }
 
+#imageBox {
+
+    max-width: 100%;
+    max-height: 100%;
+
+}
+
+
 
 }
 
@@ -226,11 +241,14 @@ body {
     background-color: silver;
 }
 
+/*
 #imageBox {
 
     height: 100%;
     width: 100%;
+
 }
+*/
 
 .conveyerBelt {
     justify-content: space-evenly;
